test/mutation_analysis/s0152_maximum_product_subarray/hafis/o3/mutants/17/result.txt
./test/mutation_analysis/s0152_maximum_product_subarray/hafis/o3/mutants/17/Solution.java:35: error: unreachable statement
        return ans;
        ^
1 error
